# argupedia

./: Cargo.toml  README.md  build.rs  style.scss
src/: main.rs
templates/: base.rs.html  debate.rs.html  error.rs.html  home.rs.html
