[package]
name = "argupedia"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
edition = "2021"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime = "0.3"

# We don't use chrono but there's a semver issue between chrono and actix. We have to pin chrono to a specific version
# in order to safely do a "cargo update".
chrono = "=0.4.10"

[build-dependencies]
ructe = { version = "0.17.2", features = ["sass", "mime03"] }
